Bug 103820 - With OpenGL enabled Help -> About dialog rendered in black
Summary: With OpenGL enabled Help -> About dialog rendered in black
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All Windows (All)
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-11-10 04:29 UTC by V Stuart Foote
Modified: 2016-11-26 23:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2016-11-10 04:29:49 UTC
Description:
With OpenGL rendering enabled the Help -> About dialog is being rendered with a black background and grey text.

Steps to Reproduce:
-

Actual Results:  
-

Expected Results:
-


Reproducible: Always

User Profile Reset: No

Additional Info:
bibisected range 2016-11-07 and 2016-11-08

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=cef72944370015af03b92055d8f86cbf646a52f5..05d2a66955f8a6552a79696474386ca9f45f9ef2


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; Trident/7.0; rv:11.0) like Gecko
Comment 1 Luke 2016-11-11 02:59:31 UTC
Verified with Nvidia GTX 650 under Win 10. 

Version: 5.3.0.0.alpha1+
Build ID: 05d2a66955f8a6552a79696474386ca9f45f9ef2
Comment 2 Luke 2016-11-12 08:12:17 UTC
I bisected this regression down to:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=19dc288ce4a5ad7a386ff2b4208b7284d8731067

Tomaž,
Could you please take a look at this issue?
Comment 3 Xisco Faulí 2016-11-12 18:40:03 UTC
Adding Cc: to Tomaž Vajngerl
Comment 4 Aron Budea 2016-11-21 04:27:09 UTC
Luke, could you check if the following issue originates from the same commit:

1. Open any LO component, eg. Writer.
2. Click a menu.
3. Move cursor along different menus back and forth (File -> Edit -> ... -> Help).

=> Notice how sometimes menu names turn black, then turn back to normal randomly.
Comment 5 V Stuart Foote 2016-11-21 04:32:36 UTC Comment hidden (obsolete)
Comment 6 Luke 2016-11-24 10:31:13 UTC
The "move cursor along different menus back and forth" issue is a separate bug. It's not caused by the same commit that causes this issue. It's tracked at Bug 104139
Comment 7 Luke 2016-11-25 05:39:40 UTC
Have a patch up to fix this and the more serious slide issue.

https://gerrit.libreoffice.org/#/c/31186/
Comment 8 Commit Notification 2016-11-25 21:09:18 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d49a1bb6e2e81d001b8fdf246cb16f85eb79840

tdf#103820 & tdf#103824 fix texture refactoring mistake

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-11-25 21:13:56 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ce21dd8b9075486f92c18ac007f61a27062ce63&h=libreoffice-5-3

tdf#103820 & tdf#103824 fix texture refactoring mistake

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Luke 2016-11-26 23:25:10 UTC
Verified FIXED in Version: 5.4.0.0.alpha0+ (x64)
Build ID: 7b250d56981f78e77454a2a3fd670731b2358e75

Thanks Tomaž!