Fix tdf#103820 and tdf#103824 by reverting shared_ptr change

This reverts commit 19dc288ce4a5ad7a386ff2b4208b7284d8731067 which was causing multiple OpenGL rendering issues.

Change-Id: I94796c0685d04d407799d08c37473114e6a217d1