vcl/opengl/FixedTextureAtlas.cxx
@@ -21,7 +21,7 @@
 
 struct FixedTexture
 {
-    std::shared_ptr<ImplOpenGLTexture> mpTexture;
+    ImplOpenGLTexture* mpTexture;
     int mnFreeSlots;
     std::vector<bool> maAllocatedSlots;
 
@@ -42,6 +42,7 @@ struct FixedTexture
     ~FixedTexture()
     {
         mpTexture->ResetSlotDeallocateCallback();
+        mpTexture->DecreaseRefCount(-1);
     }
 
     void allocateSlot(int nSlot)
