vcl/opengl/texture.cxx
@@ -40,6 +40,7 @@ SAL_CONSTEXPR GLenum constInternalFormat = GL_RGBA8;
 
 // texture with allocated size
 ImplOpenGLTexture::ImplOpenGLTexture( int nWidth, int nHeight, bool bAllocate ) :
+    mnRefCount( 1 ),
     mnTexture( 0 ),
     mnWidth( nWidth ),
     mnHeight( nHeight ),
@@ -72,6 +73,7 @@ ImplOpenGLTexture::ImplOpenGLTexture( int nWidth, int nHeight, bool bAllocate ) 
 
 // texture with content retrieved from FBO
 ImplOpenGLTexture::ImplOpenGLTexture( int nX, int nY, int nWidth, int nHeight ) :
+    mnRefCount( 1 ),
     mnTexture( 0 ),
     mnWidth( nWidth ),
     mnHeight( nHeight ),
@@ -104,6 +106,7 @@ ImplOpenGLTexture::ImplOpenGLTexture( int nX, int nY, int nWidth, int nHeight ) 
 
 // texture from buffer data
 ImplOpenGLTexture::ImplOpenGLTexture( int nWidth, int nHeight, int nFormat, int nType, void const * pData ) :
+    mnRefCount( 1 ),
     mnTexture( 0 ),
     mnWidth( nWidth ),
     mnHeight( nHeight ),
@@ -221,6 +224,7 @@ bool ImplOpenGLTexture::InitializeSlotMechanism(int nInitialSlotSize)
 
 void ImplOpenGLTexture::IncreaseRefCount(int nSlotNumber)
 {
+    mnRefCount++;
     if (mpSlotReferences && nSlotNumber >= 0)
     {
         if (nSlotNumber >= int(mpSlotReferences->size()))
@@ -244,18 +248,23 @@ void ImplOpenGLTexture::DecreaseRefCount(int nSlotNumber)
             mFunctSlotDeallocateCallback(nSlotNumber);
         }
     }
+
+    mnRefCount--;
+    if (mnRefCount <= 0)
+        delete this;
 }
+
 
 OpenGLTexture::OpenGLTexture() :
     maRect( 0, 0, 0, 0 ),
-    mpImpl(),
+    mpImpl(nullptr),
     mnSlotNumber(-1)
 {
 }
 
-OpenGLTexture::OpenGLTexture(const std::shared_ptr<ImplOpenGLTexture>& rpImpl, Rectangle aRectangle, int nSlotNumber)
+OpenGLTexture::OpenGLTexture(ImplOpenGLTexture* pImpl, Rectangle aRectangle, int nSlotNumber)
     : maRect(aRectangle)
-    , mpImpl(rpImpl)
+    , mpImpl(pImpl)
     , mnSlotNumber(nSlotNumber)
 {
     if (mpImpl)
@@ -264,24 +273,23 @@ OpenGLTexture::OpenGLTexture(const std::shared_ptr<ImplOpenGLTexture>& rpImpl, R
 
 OpenGLTexture::OpenGLTexture( int nWidth, int nHeight, bool bAllocate )
     : maRect( Point( 0, 0 ), Size( nWidth, nHeight ) )
-    , mpImpl(new ImplOpenGLTexture(nWidth, nHeight, bAllocate))
     , mnSlotNumber(-1)
 {
+    mpImpl = new ImplOpenGLTexture( nWidth, nHeight, bAllocate );
 }
 
 OpenGLTexture::OpenGLTexture( int nX, int nY, int nWidth, int nHeight )
     : maRect( Point( 0, 0 ), Size( nWidth, nHeight ) )
-    , mpImpl(new ImplOpenGLTexture(nX, nY, nWidth, nHeight))
     , mnSlotNumber(-1)
 {
+    mpImpl = new ImplOpenGLTexture( nX, nY, nWidth, nHeight );
 }
 
 OpenGLTexture::OpenGLTexture( int nWidth, int nHeight, int nFormat, int nType, void const * pData )
     : maRect( Point( 0, 0 ), Size( nWidth, nHeight ) )
-    , mpImpl(new ImplOpenGLTexture(nWidth, nHeight, nFormat, nType, pData))
     , mnSlotNumber(-1)
 {
-
+    mpImpl = new ImplOpenGLTexture( nWidth, nHeight, nFormat, nType, pData );
 }
 
 OpenGLTexture::OpenGLTexture( const OpenGLTexture& rTexture )
@@ -314,12 +322,12 @@ OpenGLTexture::~OpenGLTexture()
 
 bool OpenGLTexture::IsUnique() const
 {
-    return mpImpl || mpImpl.unique();
+    return mpImpl == nullptr || mpImpl->IsUnique();
 }
 
 GLuint OpenGLTexture::Id() const
 {
-    if (mpImpl)
+    if( mpImpl )
         return mpImpl->mnTexture;
     return 0;
 }
@@ -564,7 +572,7 @@ OpenGLTexture::operator bool() const
     return IsValid();
 }
 
-OpenGLTexture& OpenGLTexture::operator=( const OpenGLTexture& rTexture )
+OpenGLTexture&  OpenGLTexture::operator=( const OpenGLTexture& rTexture )
 {
     if (rTexture.mpImpl)
     {
